# runtime_dispatch

./: CMakeLists.txt  README.md
src/: dispatch.cpp  dispatch.h
test/: demo.cpp
